# experience-brain

./: .gitignore  AGENTS.md  CHANGELOG.md  CITATION.cff  CONTRIBUTING.md  DESIGN.md  HANDOFF.md  LICENSE  OWNER_GUIDE_TH.md  PRODUCT.md  PROGRESS.md  PROJECT_PLAN.md  README.md  SECURITY.md  brain.yaml  pyproject.toml
.codex/: config.toml
.codex/agents/: README.md  implementer.toml  planner.toml
.streamlit/: config.toml
benchmark-exp/memoryarena/: .gitignore  CITATION.md  PROTOCOL.md  README.md
data/: events.jsonl  experiences.jsonl  knowledge.jsonl
docs/: CLI_REFERENCE.md  CODEX_MCP.md  DASHBOARD_GUIDE.md  ENVIRONMENT_REPORT.md  LEGACY.md  MCP_SETUP.md  THAIPHALEX_PILOT.md
evaluations/: COST_ESTIMATE.md  benchmark-lock.example.yaml  runtime.example.yaml
evaluations/manifests/: README.md
experiments/: INDEX.md
experiments/EXP-03-live-codex-mcp-integration/: README.md  config.yaml  results.json
experiments/EXP-03.1-owner-review-dashboard/: README.md  config.yaml  results.json
experiments/EXP-03.2-knowledge-inbox-dual-memory-foundation/: README.md  config.yaml  results.json
experiments/EXP-04-memoryarena-benchmark-integration/: README.md  config.yaml  results.json
inbox/: .gitkeep  exp03-2-owner-live-validation.md
policies/: lite.yaml
prompts/: README.md
reports/: review-20260718-115149.md  review-20260718-115157.md
src/experience_brain/: __init__.py  capsule.py  capture.py  cli.py  config.py  consolidate.py  consolidation.py  full.py  (+15 more)
starter-kit/: ARCHITECTURE_LITE_TO_FULL.md  BASELINE_COMPARISON.md  BENCHMARK_PROTOCOL.md  CODEX_RUNBOOK.md  DATA_ETHICS_AND_REPRODUCIBILITY.md  EXPERIMENT_PLAN.md  LITERATURE_REVIEW_INDEX.md  MARKDOWNIFY_MCP_INTEGRATION.md  PAPER_ROADMAP.md  README.md  RESEARCH_QUESTION_AND_HYPOTHESES.md  START_HERE.md
tests/: conftest.py  test_capture_consolidate_retrieve.py  test_cli_mcp.py  test_dashboard.py  test_knowledge_inbox.py  test_live_codex_mcp_integration.py  test_memoryarena_adapter.py  test_public_repository.py  test_store.py
(+35 files in other folders)
