[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "experience-brain"
version = "0.1.0"
description = "Deterministic, provenance-preserving Lite profile for Experience Brain"
requires-python = ">=3.11,<3.12"
dependencies = [
  "PyYAML>=6.0,<7",
  "typer>=0.12,<1",
  "tiktoken>=0.7,<1",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10,<2",
  "pytest>=8.0,<9",
  "pytest-cov>=5.0,<7",
  "ruff>=0.5,<1",
  "types-PyYAML>=6.0,<7",
]

[project.scripts]
brain = "experience_brain.cli:app"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.coverage.run]
source = ["experience_brain"]

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src", "tests"]
