[build-system]
requires = ["setuptools>=69"]
build-backend = "setuptools.build_meta"

[project]
name = "experience-brain"
version = "0.2.0"
description = "Lean Agent-CLI-first Experience Brain POC"
readme = "README.md"
license = {text = "Apache-2.0"}
requires-python = ">=3.11,<3.12"
dependencies = [
  "mcp>=1.0,<2",
  "pydantic>=2.7,<3",
  "streamlit>=1.36,<2",
  "typer>=0.12,<1",
]

[project.optional-dependencies]
dev = [
  "mypy>=1.10,<2",
  "pytest>=8.0,<9",
  "ruff>=0.5,<1",
]

[project.scripts]
experience = "experience_brain.cli:app"
experience-brain-mcp = "experience_brain.mcp_server:main"

[tool.setuptools]
package-dir = {"" = "src"}

[tool.setuptools.packages.find]
where = ["src"]

[tool.pytest.ini_options]
testpaths = ["tests"]
addopts = "-q"

[tool.ruff]
line-length = 100
target-version = "py311"

[tool.ruff.lint]
select = ["E", "F", "I", "UP"]

[tool.mypy]
python_version = "3.11"
strict = true
files = ["src", "tests"]

